--- a/Intr/challenge.tex
+++ b/Intr/challenge.tex
@@ -2,10 +2,10 @@
 \section{Challenges}
 \vspace{-1em}
 \label{sec:challenges}
-Although many effective graph anonymization techniques have been proposed for deterministic graphs, shifting the graph anonymization techniques to uncertain graphs is challenging. 
+Although many effective graph anonymization techniques have been proposed for deterministic graphs, it is  challenging  to shift existing graph anonymization techniques to work over uncertain graphs.  
 
-It is challenging to develop a proper metric for quantifying the information loss for uncertain graph anonymization. Fundamentally, the graph anonymization techniques required modifying graph structure at some level. The intermediate goal of graph anonymization is to balance the utility and privacy. The first question we need to solve is to develop proper metrics for quantifying loss of information. In the context of deterministic graphs, this problem has been extensively studied. Most of the previous works use the total number of modified edges to measure the utility loss \cite{Liu_Towards_2008,Boldi_Injecting_2012}. Researchers argued this measure is not effective as it assumes each edge modification has an equal impact on the original graph properties \cite{Wang2011}. They suggest studying the change on other structural properties such as the spectrum \cite{Ying_Randomizing_2008}, community structure \cite{Wang2011}, shortest path length and the neighborhood overlap \cite{Ninggal_Utility_2015}. However, above-mentioned metrics are all designed for comparing deterministic graphs and can not be used to handle uncertain graphs directly. Thus, we need to investigate other utility metrics suitable for uncertain graphs which are able to capture the essence of structural properties for better serving a wide range of analytics. Developing metrics for quantifying loss of information for uncertain graph mining task is a challenging research work on its own. 
+It is challenging to develop a proper metric for quantifying the information loss for uncertain graph anonymization. Fundamentally, the graph anonymization techniques required modifying graph structure at some level. The intermediate goal of graph anonymization is to balance the utility and privacy. The first question we need to solve is to develop proper metrics for quantifying loss of information. In the context of deterministic graphs, this problem has been extensively studied. Most of the previous works use the total number of modified edges to measure the utility loss \cite{Liu_Towards_2008,Boldi_Injecting_2012}. Researchers argued this measure is not effective as it assumes each edge modification has an equal impact on the original graph properties \cite{Wang2011}. They suggest studying the change on other structural properties such as the spectrum \cite{Ying_Randomizing_2008}, community structure \cite{Wang2011}, shortest path length and the neighborhood overlap \cite{Ninggal_Utility_2015}. However, above-mentioned metrics are all designed for comparing deterministic graphs and can not be used to handle uncertain graphs directly. Thus, we need to investigate other utility metrics suitable for uncertain graphs which are able to capture the essence of structural properties for better serving a wide range of analytics. 
 
-It is challenging to define the adversary knowledge and privacy protection model which explicitly incorporates edge uncertainty. Compared to deterministic graphs, the publishing of uncertain graphs reveals additional information--associated edge uncertainties which can be used by the adversary to re-identify some entities in the released uncertain graph. Clearly, the public available edge uncertainty can be used to enhance various kinds of de-anonymization attack. The second question we need to solve is to model how the adversary incorporates edge uncertainty into the de-anonymization process, namely Attack Model. In this work, we focus on structural attack. Usually, structural attacks perform in the following way. Let $G$ be a graph and $\acute{G}$ be the anonymized version of the given graph. The adversary locates the match vertices in $\acute{G}$ according to the structural information about the target in $G$. If there is a limited number of answers, it may lead to target node re-identification and to privacy infringement. In the case of deterministic graphs, the structural information of a target in $G$ is an assertion with certainty, such as ``Ana has 3 neighbors" and the matching assertion can be evaluated as True or False with certainty. In the case of uncertain graphs, it becomes more complex. First, as ever discussed, the structural property of a target node $v$ in the original uncertain graph is defined as a set of observations over all the possible worlds.First, depending on the domain of real applications, the adversary may have a complete and exact knowledge  or only the aggregated statistics with respect to the structural property. Let the property be node degree, the adversary may assess the exact degree distribution or only the global statistic.  Second, the matching process which links the nodes in the perturbed graph with the collected structural information (complete distribution or expected value) performs in a different way. We need to extend the matching evaluation in uncertain graphs with different kinds of adversary knowledge, and then design a proper privacy model on the basis of the matching evaluation. In the context of uncertain graphs, it remains an unexplored problem. 
+It is challenging to define the adversary knowledge and privacy protection model which explicitly incorporates edge uncertainty. Compared to deterministic graphs, the publishing of uncertain graphs reveals additional information--associated edge uncertainties which can be used by the adversary to re-identify some entities in the released uncertain graph. The available edge uncertainty in the released uncertain graph can be used to enhance various kinds of de-anonymization attack. Together with edge uncertainty, they become newly identified attacks which are different from existing ones. The theoretical formulation is needed. The second question we need to solve is to model how the adversary incorporates edge uncertainty into the de-anonymization process, namely Attack Model. In this work, we focus on structural attack. Usually, structural attacks perform in the following way. Let $G$ be a graph and $\acute{G}$ be the anonymized version of the given graph. The adversary locates the match vertices in $\acute{G}$ according to the structural information about the target in $G$. If there is a limited number of answers, it may lead to target node re-identification and to privacy infringement. In the case of deterministic graphs, the structural information of a target in $G$ is an assertion with certainty, such as ``Ana has 3 neighbors" and the matching assertion can be evaluated as True or False with certainty. In the case of uncertain graphs, it becomes more complex. The structural property of a target node $v$ in an uncertain graph is defined as a set of observations over all the possible worlds. First, depending on the domain of real applications, the adversary may have a complete and exact knowledge or only the aggregated statistics with respect to the structural property. Let the property be node degree, the adversary may assess the exact degree distribution or only the global statistic. Different adversary knowledge triggers different matching attack. Second, the matching process which links the nodes in the perturbed graph with the collected structural information (complete distribution or expected value) performs in a different way. We need to extend the concept of matching attacks in uncertain graphs with different kinds of adversary knowledge, and then design a proper privacy model on the basis of the matching evaluation. 
 
-It is challenging to design an effective and efficient uncertain graph techniques. Although several graph anonymization methods have been developed, they are only applicable to deterministic graphs. Anonymization in an uncertain graph is still an open problem.  Given an input graph $G$ and allowed operations $O$, the task of graph anonymization is to transform $G$ into the anonymous one by performing as few operations as possible.  The problem is known to be NP-hard when the input graph $G$ is deterministic one and graph modification operations includes edge addition and edge deletion \cite{Hartung_Theory_2015}. The complexity of uncertain graph anonymization problem falls into the same category. 
+It is challenging to design an effective and efficient uncertain graph techniques. Given an input graph $G$ and allowed operations $O$, the task of graph anonymization is to transform $G$ into the anonymous one by performing as few operations as possible.  The problem is known to be NP-hard when the input graph $G$ is deterministic one and graph modification operations includes edge addition and edge deletion \cite{Hartung_Theory_2015}. The complexity of uncertain graph anonymization problem falls into the same category. Although many graph anonymization methods have been proposed, they can not be used for uncertain graph directly. The shifting of existing methods need consider uncertainty explicitly in each aspect. For example, we need to design a set of heuristic-based techniques to make the anonymization mechanism efficient meanwhile preserving data utilities in the context of uncertain graphs. 
