--- a/aug.bib
+++ b/aug.bib
@@ -313,3 +313,13 @@
 }
 
 
+@article{Zou_K_2009,
+	author={Zou, L and Chen, L and {\"O}zsu, {MT}},
+	title = {K-automorphism: A General Framework for Privacy Preserving Network Publication},
+	journal = {Proc. VLDB Endow.},
+	volume = {2},
+	number = {1},
+	year = {2009},
+	pages = {946--957}
+}
+
