--- a/bermuda.tex
+++ b/bermuda.tex
@@ -4,3 +4,4 @@ In this chapter, I will briefly review the distributed triangle listing techniqu
 
 \input{bec.tex}
 \input{bvc.tex}
+\input{bermudaContribution.tex}
