--- a/preface.tex
+++ b/preface.tex
@@ -14,10 +14,10 @@ Dec 2016
 \vfill
 \begin{minipage}{18cm}
 \textbf{Committee Members:}\\
-Dr. Mohamed Y. Eltabakh, Assistant Professor, Worcester Polytechnic Institute. \\
-Dr. Elke A. Rundensteiner, Professor, Worcester Polytechnic Institute. Advisor.\\
+Dr. Mohamed Y. Eltabakh, Assistant Professor, Worcester Polytechnic Institute. Advisor.\\
+Dr. Elke A. Rundensteiner, Professor, Worcester Polytechnic Institute.\\
 Dr. Xiangnan Kong, Assistant Professor, Worcester Polytechnic Institute.\\
-Dr. Yuanyuan Tian, Researcher, IBM Almaden, External member
+Dr. Yuanyuan Tian, Researcher, IBM Almaden, External member.
 \end{minipage}
 }
 
@@ -42,18 +42,18 @@ Dr. Yuanyuan Tian, Researcher, IBM Almaden, External member
 % Fortunately, LaTeX has thought of that, so it's very easy:
 %
 \begin{abstract}
-In the real world, graph structured data is ubiquitous. For example, social networks, communication networks, biological networks, etc. can all be modeled as graphs. Various graph analysis mining methods have been proposed to deepen the understanding of the graph data. With the advent of the technology, the graph in real-world applications can often be massive involving billions of vertices and edges. For example, Facebook's  social network involves more than 1.23 billion users (vertices), and more than 208 billion friendships (edges). Such massive graphs can easily exceed the available memory of a single commodity computer and pose new challenge for graph mining tasks. Distributed analysis on massive graphs has become an important research area in recent years. Within this scope, we focus on designing an efficient distributed triangle listing algorithm for web-scale graphs. 
+In the real world, graph structured data is ubiquitous. For instance, social networks, communication networks, biological networks, etc. can all be modeled as graphs. Various graph analysis mining methods have been proposed to deepen the understanding of the graph data, in particular in sequential platforms. However, the graph size continues to increase and becomes massive involving billions of vertices and edges. Such massive graphs can easily exceed the available memory of a single commodity computer and pose a new challenge for graph mining tasks.
+One of the methods to deal with large graphs is to exploit parallel programming paradigms including MapReduce. 
+Within this scope, we study how to design an efficient distributed triangle listing algorithm for web-scale graphs with MapReduce. 
 
-\textit{$\bullet$~Distributed triangle listing algorithm} In the past, the fundamental graph problem of triangle listing has been studied intensively from a theoretical point of view. Due to the very large size of networks, the triangle listing problem  has  been  studied in several distributed infrastructures including MapReduce. Triangle listing requires to access teh neighbors of the neighbor of a vertex, which may apper arbitrarily in different graph parititions. Existing algorithms suffer from generating and shuffling huge amounts of intermediate data, where interestingly, a large percentage of this data is redundant. Inspired by this observation, we present the {\em ``Bermuda''} method that effectively reduces the size of the intermediate data via redundancy elimination and sharing of messages whenever possible. 
+\textit{$\bullet$~Distributed triangle listing algorithm} Inspired by the theoretical and practical significance, the triangle listing problem has then been studied in MapReduce.  Triangle listing requires accessing the neighbors of the neighbor of a vertex, which may appear arbitrarily in different graph partitions (poor locality in data access).  Existing algorithms suffer from generating and shuffling huge amounts of intermediate data, where interestingly, a large percentage of this data is redundant. Inspired by this observation, we present the {\em ``Bermuda''} method that effectively reduces the size of the intermediate data via redundancy elimination and sharing of messages whenever possible. 
 
-As ever discussed, there are many analytical questions that can be answered using such graph data. However, the raw data is particularly sensitive: it contains personal details and the sensitve connection between them which are not public and should not be reveal. This leads to an interesting and important question how to effectively anonymize so as to guarantee the privacy of graph data while maximizing the value (utility) of the resulting anonymized graph. Many graph anonymization methods have been proposed to provide the privacy guarantee. 
+Besides, in many real-world applications, graphs are not deterministic but probabilistic in nature for a variety of reasons. In these cases, data is represented as an uncertain graph whose edges are accompanied with a probability of existence. Uncertain graphs have been shown to be invaluable dataset for a variety of real applications and analytic tasks.  
+However, the raw uncertain graph is particularly sensitive: it contains personal details and  sensitive connections between them which are not public and should not be revealed. Thus, before such uncertain graphs can be released for research purposes, the data needs to be anonymized to prevent potential re-identification attacks. However, previous graph anonymization approaches are all geared towards deterministic graphs. It calls for novel anonymization techniques that are able to cope with the additional uncertainty explicitly.  Within this scope, we study uncertain graph anonymization techniques for resisting privacy attacks depend on the node degree statistic and  degree probabilistic distribution. 
 
-In many real-world applications, graphs are not deterministic but probabilistic in nature for a variety of reasons. In these cases, data is represented as an uncertain graph whose edges are accompanied with a probability of existence. Uncertain graphs have been shown to be invaluable dataset for a variety of real applications and analytic tasks \cite{Bollacker_Freebase_2008,Kempe_Maximizing_2003,Krogan_Global_2006}.  Before such uncertain graphs can be released for research purposes, the data needs to be anonymized to prevent potential re-identification attacks. Previous graph anonymization approaches were developed for deterministic graphs. Uncertain graph anonymization is an open and challenging problem. Within this scope, we 
-study anonymization techniques for resisting degree-based and degree probability distribution based privacy attack. 
+\textit{$\bullet$~Degree Anonymization over Uncertain Graphs} In this work, we consider that the adversary relies upon the knowledge of node  degree statistic (the expected value) in devising a matching attack for nodes in the released uncertain graph, which is a well-known privacy attack while in the new context--uncertain graph. However, applying existing methods straightforward can not provide efficient privacy protection meanwhile incurring a large amount of utility loss. To prevent such matching attack, we consider {\keobf}, a popular privacy notation, to protect such degree-based matching attack. We extend the existing {\keobf}framework to work over the uncertain graph. We also design a set of heuristic-based techniques to make the anonymization mechanism efficient meanwhile preserving data utilities, especially the graph reliability. Extensive experiments on large real datasets show the satisfactory performance of our methods in terms of privacy protection, efficiency, and practical utilities. 
 
-\textit{$\bullet$~Degree Anonymization over Uncertain Graphs} In this work, we consider that the adversary relies upon knowledge of node degree (mean) in devising a matching attack for nodes in the released uncertain graph, which is a well-known privacy attack while in the new context--uncertain graph. However, applying existing methods straightforward can not provide efficient privacy protection meanwhile incurring a large amount of utility loss. To prevent such matching attack, we consider {\keobf}, a popular privacy notation, to protect such degree-based matching attack. We extend the existing {\keobf}framework to work over the uncertain graph. We also design a set of heuristic-based techniques to make the anonymization mechanism efficient meanwhile maintaining data utilities, especially the graph reliability. Extensive experiments on large real datasets show the satisfactory performance of our methods in terms of privacy protection, efficiency, and practical utilities. 
-
-\textit{$\bullet$~Probabilistic Degree Anonymization over Uncertain Graphs} In this work, we formally present the definition of probabilistic degree-based node re-identification attack, which is a newly identified privacy attack in the uncertain graph. Similarly, we consider {\keobf} to protect such matching attack. We develop a general framework which injects uncertainty to edges in the uncertain graph for obtaining {\keobf}. In particular, we propose to utilize the clustering result of probabilistic degree for guiding the perturbation which maximizes the likelihood of providing higher privacy guarantee. We also consider utilizing the genetic algorithm for the optimization of edge perturbation strategy. Extensive studies including privacy protection, efficiency and practical utility evaluation will be conducted on large real datasets to evaluate the effectiveness and efficency of my proposed approaches. 
+\textit{$\bullet$~Probabilistic Degree Anonymization over Uncertain Graphs} In this work, we consider that the adversary relies upon the knowledge of node  degree probability distribution rather than aggregated statistic in devising a matching attack for nodes in the released uncertain graph. We formally present the definition of probabilistic degree-based node re-identification attack, which is a newly identified privacy attack in the uncertain graph. Similarly, we extend the concept of {\keobf} to protect such matching attack. We develop a general framework which injects uncertainty to edges in the uncertain graph for obtaining {\keobf}. In particular, we propose to utilize the clustering result of probabilistic degree for guiding the perturbation which maximizes the likelihood of providing higher privacy guarantee. We also consider utilizing the genetic algorithm for the optimization of edge perturbation strategy. Extensive studies including privacy protection, efficiency, and practical utility evaluation will be conducted on large real datasets to evaluate the effectiveness and efficiency of my proposed approaches. 
 \end{abstract}
 
 % From here on, we need Roman page numbers according to the library
