--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -146,7 +146,7 @@ In the context of deterministic graphs, such knowledge can be expressed as one a
 
 It is difficult to model the specific degree-related knowledge used by the adversaries by advance. In our work, we first consider the adversary can and only acquire the expected node degree of victim nodes. For example, the adversary knows that the expected value of the number of Ana's neighbors should $3$  as shown in Figure \ref{fig:trueGraph}.  Later, we consider the adversary can acquire more comprehensive knowledge of node degree of victim nodes such as the distribution function. For example, the adversary may know the distribution of the number of Ana's neighbors as ${(3:0.504),(2:0.398),(1:0.092),(0:0.006)}$. 
 
-The second step to anonymization is to know how the adversary links the external knowledge such as node degree to a node in the perturbed graph. In the deterministic graph, the process of node de-anonymization with the external node degree information is quite straightforward. Let $\mathcal{G}$ be a graph and $\acute{\mathcal{G}}$ be the anonymized version of the given graph. The adversary can get a number of \texttt{match} vertices in $\acute{\mathcal{G}}$, {\ie}, the nodes $U_{c}$ with the \texttt{match} degree. When $\acute{\mathcal{G}}$ is a deterministic one, for a given node in $\acute{\mathcal{G}}$, the assertion is evaluated either \emph{true} or \emph{false} with certainty. When the anonymized output $\acute{\mathcal{G}}$ is probabilistic one, the matching attack is performed over all the possible worlds. Following the path, the matching event would be observed with an probability value which defined in a continous range $(0,1)$. For example, the probability that the node $a$ was observed with degree $3$ is $0.504$ in Figure \ref{}. We consider the matching attack is performed between a random variable, namely, find the equal random variable. Namely, for a given node $u$ in $\acute{\mathcal{G}}$, it is defined as the probability that the random variable $d_{u}$ is equal to the adversary knowledge $d_{v}$, denotes as $P(d_{u}=d_{v})$. It can be computed as 
+The second step to anonymization is to know how the adversary links the external knowledge such as node degree to a node in the perturbed graph. In the deterministic graph, the process of node de-anonymization with the external node degree information is quite straightforward. Let $\mathcal{G}$ be a graph and $\acute{\mathcal{G}}$ be the anonymized version of the given graph. The adversary can get a number of \texttt{match} vertices in $\acute{\mathcal{G}}$, {\ie}, the nodes $U_{c}$ with the \texttt{match} degree. When $\acute{\mathcal{G}}$ is a deterministic one, for a given node in $\acute{\mathcal{G}}$, the assertion is evaluated either \emph{true} or \emph{false} with certainty. When the anonymized output $\acute{\mathcal{G}}$ is probabilistic one, the matching attack is performed over all the possible worlds. Following the path, the matching event would be observed with an probability value which defined in a continous range $(0,1)$. For example, the probability that the node $a$ was observed with degree $3$ is $0.504$ in Figure \ref{fig:trueGraph}. We consider the matching attack is performed between a random variable, namely, find the equal random variable. Namely, for a given node $u$ in $\acute{\mathcal{G}}$, it is defined as the probability that the random variable $d_{u}$ is equal to the adversary knowledge $d_{v}$, denotes as $P(d_{u}=d_{v})$. It can be computed as 
 \begin{equation*}
     P(d_{u}=d_{v})= \sum_{i \in Z } P(d_{u}=i) P(d_{v}=i) 
 \end{equation*}
@@ -178,7 +178,7 @@ The uncertain graph $\mathcal{G}$ is $(k,\epsilon)$-obf with respect to property
 The bottom one normalizes values in each column to get distribution $Y_{P(v)}$. For example, $Y_{0}(a)$= $\frac{X_{0}(a)}{S(0)}=0.023$. The entropy $H(Y_d(v))$ for each degree value $\omega$ is shown in the last bottom row. Given $k=3, \log_{2}{3}=1.58$, node $b,c$ with expected degree $2$ and $d$ with true degree $1$ satisfies $k$-obf while $a$ with expected degree $3$ fails, thus $\epsilon=0.25$.}
 
 \subsection{Reliability-based Utility Criteria}
-Inspired by the importance of reliability, we suggest to quantify the utility loss, anonymization cost, as the reliability difference between the anonymized result $\tilde{\mathcal{G}}$ and the original one $\mathcal{G}$, reliability discrepancy. We proceed to explain its formal definition. 
+Inspired by the importance of reliability, we suggest to quantify the utility loss (anonymization cost) as the reliability difference between the anonymized result $\tilde{\mathcal{G}}$ and the original one $\mathcal{G}$, reliability discrepancy. We proceed to explain its formal definition. 
 
 In the context of uncertain graphs, \emph{reliability} generalizes the concept of connectivity by  capturing the probability that two given (sets of) nodes are reachable over all possible worlds. We focus on two-terminal reliability. 
 \begin{definition}
